src/css/style.css
/* ... */
.post {
  align-items: center;
  background: var(--white);
  border-radius: var(--default-radius);
  color: var(--black);
  display: flex;
  flex-direction: column;
  margin: 20px 55px;
  max-width: 420px;
  text-align: center;
}

.post-inner {
  padding: 10px 20px;
}

#section-ten .post {
  background: var(--black);
}

#section-ten .post-inner {
  background: var(--black);
  border: solid var(--white) 1px;
  color: var(--white);
}

.post-avatar {
  align-self: start;
  margin: -55px 0 0 -55px;
}

.post-date {
  background-color: var(--grey-light);
  border-radius: var(--default-radius);
  font-size: 1rem;
  font-weight: normal;
  margin: 20px 0;
  padding: 4px 0;
  width: 250px;
}

.post-forwarded-from {
  background: url(/images/arrow_email_forward_post_right_icon.svg) no-repeat;
  font-size: 0.75rem;
  font-weight: normal;
  padding: 5px 0 0 28px;
  text-align: left;
}

.post-body {
  font-size: 1.125rem;
  padding: 20px 0;
  text-align: left;
}

.post-meta-info {
  color: var(--grey-dark);
  font-size: 1rem;
  text-align: right;
}

.post-view-count {
  background: url(/images/eye.svg) no-repeat;
  padding: 10px 0 0 30px;
}

.post-time {
  padding-left: 10px;
}

/* Video */
.video-container {
  background-color: var(--black);
  height: 0px;
  margin-bottom: 2em;
  padding-top: 56.25%;
  position: relative;
}

.video {
  height: 100%;
  left: 0;
  position: absolute;
  top: 0;
  width: 100%;
}

/** Message **/
.messages {
  border: solid 1px var(--white);
  margin: 0 auto;
  max-width: 1040px;
  word-wrap: break-word;
}

.messages a {
  color: var(--white);
}

.messages a:hover {
  background-color: var(--white);
  color: var(--black);
  padding-inline: 1rem;
  padding-block: 0.75rem;
  border-radius: 100vw;
}

.messages h3 {
  background-color: var(--white);
  color: var(--black);
  padding: 10px 20px;
}

.messages-inner {
  display: flex;
  flex-direction: column;
  padding: 20px;
}

.message-bubble {
  position: relative;
}

.typing-dots {
  display: flex;
  flex-direction: row;
  position: absolute;
  top: 20px;
}

.right .typing-dots {
  right: 20px;
}

.left .typing-dots {
  left: 20px;
}

.typing-dots .dot {
  background-color: var(--white);
  border-radius: 100%;
  height: 8px;
  width: 8px;
}

.message-body {
  border: solid 1px var(--white);
  border-radius: 2rem;
  margin: 10px 0;
  padding: 20px;
}

.left .message {
  margin-right: 30%;
}

.right .message {
  margin-left: 30%;
}

@media (max-width: 800px) {
  .left .message {
    margin-right: 10%;
  }

  .right .message {
    margin-left: 10%;
  }
}

.left .message .message-body {
  background-color: var(--black);
}

.right .message .message-body {
  background-color: var(--white);
  color: var(--black);
}
.message-time {
  margin: 20px 0;
}

.right .message .message-time {
  text-align: right;
}

.left .message .message-time {
  text-align: left;
}

/** Image **/

.images {
  margin-top: 3rem;
  position: relative;
}

.images-mobile {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.image {
  position: sticky;
  top: 3rem;
}

.image img {
  margin: 0 auto;
}

#section-six .image img {
  max-width: 80%;
  opacity: 50%;
}

#section-six .image img[alt="Image Recognition 1"] {
  opacity: 90%;
}

/** Chart **/
.graph-container {
  color: var(--white);
  margin: 2rem auto;
  padding: 6rem 0 2rem 0;
}

.chart {
  font-size: 0.75rem;
  margin: 4rem auto;
  max-width: 80%;
}

/** Faces with information **/
.faces-with-info {
  align-items: flex-start;
  background-image: url(/images/info-faces/background.png);
  background-repeat: no-repeat;
  background-size: cover;
  color: var(--white);
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  height: 500px;
  justify-content: center;
  width: 100%;
}

#profile-fade-image-1 {
  padding: 4rem 1rem;
}

#profile-fade-image-2 {
  padding: 6rem 1rem 0 0;
}

#profile-fade-image-3 {
  padding: 2rem 1rem 0 0;
}

.profile-info {
  font-size: 0.75rem;
  margin-top: 100px;
  padding-left: 1rem;
}

.profile-info p {
  margin-bottom: 0;
}

/** Portrait **/
.portraits {
  display: flex;
  flex-flow: wrap;
  justify-content: center;
}

.portrait {
  height: 100%;
  justify-content: center;
  opacity: 2%;
  width: 80px;
}

/** Terminal **/
.terminal-container {
  font-family: "Source Code Pro", sans-serif;
  margin-top: 4.5rem;
  padding: 4.5rem 0;
}

.terminal {
  border: 2px solid var(--white);
  height: 100%;
  margin: 0 auto;
  max-width: var(--max-section-width);
  overflow: auto;
  text-align: left;
}

.terminal h3 {
  background: var(--white);
  color: var(--black);
  padding: 0 1rem;
}

.terminal h3 + p,
.terminal .output-container {
  padding: 0 1rem;
}

.terminal .input-span .prompt {
  padding-left: 1rem;
}

.terminal .user-name {
  color: var(--green);
}

.terminal .machine-name {
  color: var(--blue);
}

.terminal input,
.terminal-container {
  background: var(--black);
  color: var(--white);
}

.terminal span.command {
  /* add extra pixel because input has cursor */
  margin-left: 0.575rem;
}

.terminal input {
  margin-left: 0.5rem;
}

.terminal input:focus-visible,
.terminal input {
  border: none;
  outline: none;
}

.terminal .help ul {
  display: flex;
  flex-direction: column;
  list-style: none;
  margin: 0;
  padding-left: 1rem;
}

.terminal .help ul ul {
  padding: 0;
}

.terminal .help .sub-command-list li:not(.requires-sub-commands) {
  padding-left: 1rem;
}

.terminal .help li {
  display: flex;
}

.terminal .help li .command-name {
  font-weight: bold;
  margin-right: 1rem;
}

.terminal .help li .command-name::after {
  content: ":";
}

.terminal .error {
  color: var(--red);
}

/** Ticker **/
.tickers {
  height: 0;
}

@media (max-width: 800px) {
  .tickers {
    display: flex;
    flex-direction: column;
    gap: 2rem;
  }
}

.ticker {
  background-color: var(--black);
  color: var(--white);
  padding: 10px 20px;
  position: relative;
  width: fit-content;
  z-index: 99;
}
/* ... */

